mdt_cli/tests/snapshots/check__check_fails_when_stale.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpXB47iR
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 1

Stale consumers:
  block `greeting` at readme.md:3:1

1 consumer block(s) are out of date. Run `mdt update`.
