mdt_cli/tests/snapshots/check__check_multiple_stale_blocks.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpGtg3NT
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 2

Stale consumers:
  block `a` at readme.md:1:1
  block `b` at readme.md:7:1

2 consumer block(s) are out of date. Run `mdt update`.
