mdt_cli/tests/snapshots/check__check_no_warnings_for_valid_template_variables.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpPvULwV
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Check passed: all consumer blocks are up to date.

----- stderr -----
