mdt_cli/tests/snapshots/check__check_stale_shows_block_name_and_file.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpqGyrkI
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 1

Stale consumers:
  block `myBlock` at readme.md:1:1

1 consumer block(s) are out of date. Run `mdt update`.
