mdt_cli/tests/snapshots/check__check_verbose_shows_provider_count.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmps8cfuB
    - "--verbose"
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 1 provider(s), 1 consumer(s)
  Providers:
    @block (template.t.md)
Check passed: all consumer blocks are up to date.

----- stderr -----
