mdt_cli/tests/snapshots/check__check_warns_missing_provider.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpRztkmc
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  orphan consumers: 1

Orphan consumers:
  consumer `orphan` at readme.md:1:1 has no provider

1 consumer block(s) have no provider. Rename those consumers or define the providers in `*.t.md` files.
