mdt_cli/tests/snapshots/check__check_warns_undefined_template_variables.snap
---
source: mdt_cli/tests/check.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpWYhQeN
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Check passed: all consumer blocks are up to date.

----- stderr -----
warning: provider block `install` in template.t.md references undefined variable(s): pkgg.name
